# learnopencv

./: README.md
2D_Gaussian_Splatting_Geometrically_Accurate_Radiance_Field_Reconstruction/: README.md
3D-Gaussian-Splatting-Code/: README.md
3D-LiDAR-Object-Detection/: README.md
3D-LiDAR-Perception/: README.md
A-Deep-Dive-into-Tensorflow-Model-Optimization/: README.md
ADAS-Stereo-Vision/: README.md
AI-Fitness-Trainer-Using-MediaPipe-Analyzing-Squats/: README.md
AI_for_Video_Understanding_From_Content_Moderation_to_Summarization/: README.md
ALPR/: README.md
AgeGender/: README.md
Agentic-AI-A-Comprehensive-Introduction/: README.md
AlphaBlending/: README.md
Annotated-NeRF/: README.md
AnomalyCLIP_Harnessing_CLIP_for_Weakly_Supervised_Video_Anomaly_Recognition/: README.md
Anti-Spoofing-Face-Recognition-with-OAK-D/: README.md
Attention_Mechanism_Introduction/: README.md
AugmentedRealityWithArucoMarkers/: README.md
Autoencoder-in-TensorFlow/: readme.md
Automatic-Document-Scanner/: readme.md
Automatic-Speech-Recognition-with-Diarization-Speech-to-Text/: README.md
BERT-Bidirectional-Encoder-Representations-from-Transformers/: README.md
Background-Subtraction/: README.md
Bag-Of-Tricks-For-Image-Classification/: README.md
BatchNormalization/: README.md
BlobDetector/: README.md
Build-a-Video-to-Slides-Converter-Application-using-the-Power-of-Background-Estimation-and-Frame-Differencing-in-OpenCV/: README.md
Building MobileViT from Scratch in Keras 3/: README.md
Building-An-Automated-Image-Annotation-Tool-PyOpenAnnotate/: README.md
Building_Autonomous_Vehicle_in_Carla_Path_Following_with_PID_Control_ROS2/: README.md
CVPR-2024/: README.md
CameraCalibration/: CMakeLists.txt  README.md  calibration_utils.hpp  calibration_utils.py  cameraCalibration.cpp  cameraCalibration.py  cameraCalibrationWithUndistortion.cpp  cameraCalibrationWithUndistortion.py
CameraCalibration/tests/: assert_cli_failure.cmake  run_undistortion_cli.cmake  test_camera_calibration.cpp  test_camera_calibration.py
CenterStage/: README.md
CenterofBlob/: CMakeLists.txt  README.md  center_of_multipe_blob.cpp  center_of_multiple_blob.cpp  center_of_multiple_blob.py  requirements.txt  single_blob.cpp  single_blob.py  test_blob_centroids.py
CenterofBlob/cmake/: RunExampleTest.cmake
CharClassification/: README.md
Chrome-Dino-Bot-using-OpenCV-feature-matching/: README.md
Classification-with-localization-convert-any-keras-classifier-into-a-detector/: README.md
ColorSpaces/: README.md
Colorization/: README.md
Colormap/: README.md
ComfyUI/: README.md
Comparing-KerasCV-YOLOv8-Models-on-the-Global-Wheat-Data-2020/: README.md
Conditional-GAN-PyTorch-TensorFlow/: readme.md
Contour-Detection-using-OpenCV/: README.md
Contour-Detection-using-OpenCV/cpp/channel_experiments/: CMakeLists.txt  channel_experiments.cpp
Contour-Detection-using-OpenCV/cpp/contour_approximations/: CMakeLists.txt  contour_approx.cpp
Contour-Detection-using-OpenCV/cpp/contour_extraction/: CMakeLists.txt  contour_extraction.cpp
Contrastive-Learning-SimCLR-and-BYOL/: README.md
ControlNet-Achieving-Superior-Image-Generation-Results/: README.md
ConvexHull/: README.md
Cosmos-Reason1-Video-Understanding/: README.md
Create-AR-filters-using-Mediapipe/: readme.md
Creating-a-Virtual-Pen-and-Eraser/: README.md
Custom-Object-Detection-Training-using-YOLOv5/: README.md
DDIM-The-Faster-Improved-Version-of-DDPM-for-Efficient-AI-Image-Generation/: README.md
DETR-Overview_and_Inference/: README.md
DINOv2_by_Meta_A_Self-Supervised_foundational_vision_model/: README.md
DNN-OpenCV-Classification-Android/: README.md
DNN-OpenCV-Classification-with-Java/: README.md
DUSt3R-Dense-3D-Reconstruction/: README.md
Deciphering-LLMs/: README.md
Decoding-Virats-Flick-Shot/: readme.md  requirements_gpu.yml
Deep-Convolutional-GAN/: readme.md
Deep-Learning-with-OpenCV-DNN-Module/: README.md
Delaunay/: README.md
DenoisingAutoencoder/: Readme.md
Deploying-ML-Models-on-Arduino-From-Blink-to-Think/: README.md
Deploying-a-Deep-Learning-Model-using-Hugging-Face-Spaces-and-Gradio/: README.md
Deployment-on-Edge-LLM-Serving-on-Jetson-using-vLLM/: README.md
Depth-Anything/: README.md
Depth-Perception-Using-Stereo-Camera/: README.md
DepthPro-Monocular-Metric-Depth/: README.md
Disparity-Estimation-Using-Deep-Learning/: README.md
Distributed-Training-PyTorch/: README.md
Document-Scanner-Custom-Semantic-Segmentation-using-PyTorch-DeepLabV3/: README.md
Dreambooth_using_Diffusers/: README.md
Driver-Drowsiness-detection-using-Mediapipe-in-Python/: README.md
Drone-Programming-With-Computer-Vision-A-Beginners-Guide/: README.md
Efficient-Background-Removal-using-U2-Net/: README.md
Efficient-image-loading/: README.md
EfficientNet/: README.md
EigenFace/: README.md
EpipolarGeometryAndStereoVision/: README.md
Exploring-DINO-dino-road-segmentation/: README.md
Exploring-Slicing-Aided-Hyper-Inference/: README.md
ExposureFusion/: Readme.md
FBAMatting/: README.md
FCOS-Inference-using-PyTorch/: README.md
FPS/: CMakeLists.txt  README.md  frame_rate.cpp  frame_rate.py  requirements.txt
FPS/tests/: compare_implementations.py  test_frame_rate.py  video_fixture.py
Face-Recognition-with-ArcFace/: README.md
FaceAverage/: README.md
FaceBlurPixelate/: README.md
FaceDetectionComparison/: README.md
FaceMaskOverlay/: README.md
FaceMorph/: README.md
FaceSwap/: README.md
Facial-Emotion-Recognition/: README.md
FacialAttractiveness/: README.md
FacialLandmarkDetection/: README.md
Feature-Matching-Using-Neural-Networks/: README.md
Federated-Learning-Intro/: README.md
Fine-Tuning-AnomalyCLIP/: README.md
Fine-Tuning-BERT-using-Hugging-Face-Transformers/: README.md
Fine-Tuning-Gemma-3-VLM-using-QLoRA-for-LaTeX-OCR-Dataset/: README.md
ImageAlignment-FeatureBased/: CMakeLists.txt  README.md  align.cpp  align.py
ImageAlignment-FeatureBased/tests/: check_cpp_cli.cmake  test_alignment.py
Install-OpenCV-5-on-Linux/cpp-smoke/: CMakeLists.txt  main.cpp
(+340 files in other folders)
